--- a/document/E2_Capture_fluorescent_image.Rmd
+++ b/document/E2_Capture_fluorescent_image.Rmd
@@ -16,15 +16,15 @@ knitr::opts_chunk$set(echo=FALSE, eval = FALSE, tidy=TRUE)
 
 # Introduce
 
-High-throughput part characterization을 위한 solid-plate Imaging 논문에서 자세히 설명하지 못한 이미지 촬영법과 Exposure time 설정법, 그리고 분석법을 기술하였다.
+High-throughput Part Characterization을 위한 solid-plate imaging 논문에서 자세히 설명하지 못한 촬영법과 Exposure time 설정, 그리고 분석법을 설명합니다.
 
 # Imaging
 
 ## 촬영 조건
 
-1.  촬영은 NIS element AR(v4.0)을 이용하여 수행 되었다.
+1.  촬영은 NIS element AR(v4.0)을 이용하여 수행 하였습니다.
 
-2.  촬영 전 Bright Field에서 Zoom을 최대로 하여 초점을 맞추었다.
+2.  촬영 전 Bright Field 에서 Zoom을 최대로 한 후 위치를 맞춰 초점을 맞춥니다.
 
 3.  촬영은 `scan large image` 를 사용 하여 9 cm plate가 모두 들어오도록 하였으며 `multichannel scan` 을 사용하여 sfGFP (GFP), td.tomato (RFP) 이미지를 동시에 촬영하였다.
 
@@ -43,42 +43,41 @@ High-throughput part characterization을 위한 solid-plate Imaging 논문에서
 
 2.  전체 콜로니 중 가장 낮은 형광과 가장 높은 형광의 콜로니 확인 (정확하지 않아도 됨)
 
-3.  두 콜로니를 single culture 하여 새로운 plate로 옮긴 후 Exposure time에 따른 형광 세기 측정 (OpenCFU)
+3.  두 콜로니를 Exposure time에 따른 형광 세기 측정 (OpenCFU)
 
 4.  두 범위를 동시에 촬영 가능한 Exposure time 설정
 
     -   동시에 촬영이 불가능 할 경우 아래와 같이 HDR method 사용
-
-[Exposure time Figure]
 
 ## HDR Image generation
 
 가장 낮은 형광과 가장 높은 형광 값이 동시에 측정 불가능 할 경우 (카메라의 Dynamic range 부족) Exposure time에 대한 Modeling, HDR method로 해결 가능하다.
 
 1.  낮은 형광과 높은 형광을 적절한 세기로 촬영 가능한 2 개의 Exposure time 설정.
-
-    > 2-1. 촬영된 두 이미지를 활용하여 HDR image 제작 (NIS element AR의 `HDR` method 사용 또는 공개된 Web program 사용 ex) [HDRmerger](https://www.conversion-tool.com/hdrmerger/)
-    >
-    > 3-1. 완성된 HDR image를 분석에 사용.
+2.   촬영된 두 이미지를 활용하여 HDR image 제작 (NIS element AR의 `HDR` method 사용 또는 공개된 Web program 사용 ex) [HDRmerger](https://www.conversion-tool.com/hdrmerger/)
 
 ------------------------------------------------------------------------
 
-    > 2-2. Standard 부품 조합을 사용하여 Exposure time 에 따른 Intensity 변화 측정(거의 1:1 비율과 유사하나 조금 다름)
-    >
-    > 3-2. 위 에서 측정된 값을 사용하여 높은 exposure time의 데이터를 낮은 exposure time 에서의 값으로 변화시켜 사용
+2.  Standard 부품 조합을 사용하여 Exposure time 에 따른 Intensity 변화 측정(거의 1:1 비율과 유사하나 조금 다름)
+
+3.  위 에서 측정된 값을 사용하여 높은 exposure time의 데이터를 낮은 exposure time 에서의 값으로 변화시켜 사용
 
 # Computational analysis
 
-1.  OpenCFU program을 사용하여 각 콜로니별 position, size, Green channel mean, Red channel mean 확인
+1.  OpenCFU program을 사용하여 각 콜로니별 `position`, `size`, `Green channel mean`, `Red channel mean` 확인
 
     -   Bilateral : 0 parameter 사용.
 
-2.  Using python script(/script/opencfu.py) with colony position in GFP, RFP images, 두 이미지의 콜로니정보를 하나로 합쳐 RFU 계산 및 indexing. (GFP colony 기준)
+2.  Python script `/script/opencfu.py` 를 사용하여 GFP, RFP 이미지의 콜로니 정보를 하나로 합쳐 RFU 계산 및 Indexing (GFP colony를 기준으로)
 
-3.  계산 된 index를 image위에 표기 (python)
+    ```{bash}
+    python opencfu.py -f -i -r {}
+    ```
 
-\$\$
+    ```{python}
+    python opencfu.py 
+    ```
 
-RFU = (Green channel value \* Green channel size) / (Red channel value \* Red channel size)
+3.  계산 된 index를 image위에 표기 (python, matplotlib)
 
-\$\$
+$$RFU = (Green channel value * Green channel size) / (Red channel value * Red channel size)$$
