--- a/document/R3_Phenotype-on-genotype.rmd
+++ b/document/R3_Phenotype-on-genotype.rmd
@@ -14,57 +14,8 @@ header-includes:
 knitr::opts_chunk$set(echo=FALSE, eval = FALSE, tidy=TRUE)
 ```
 
-# Real Sample Code (R1으로 이전)
+# Introduce
 
-> 실제 데이터를 가지고 Pre-processing을 진행하는 과정을 소개한다.
->
-> 아래 데이터는 M3의 tag_demultiplex에 사용되는 데이터 이며 이후 분석은 M3에서 이어서 진행된다.
+Nanopore로 library의 비율변화를 추적하여 OD를 추정하는 방법을 설명합니다.
 
-    Sequencing Data = "/home/seq/2021/210701_DH5a-PLib/dh5a-plib/20210701_0930_MC-110372_0_agw324_ac3da2d2/fastq_pass"
-
-### 1. Pre-processing
-
-**NanoFilt**
-
-```{bash, NanoFilt}
-# cd to Data path (fastq_pass)
-barcodes=$(ls | grep 'barcode')
-
-# Make analysis folder
-for i in $barcodes; do mkdir ./"$i"/single_read; done
-
-# Run NanoFilt
-for i in $barcodes; do gunzip -c ./"$i"/*.fastq.gz | NanoFilt -q 7 -l 600 --maxlength 1500 | gzip > ./"$i"/single_read/"$i".fastq.gz; done
-```
-
-> -   각 parameter는 sequencing summary 결과를 토대로 임의로 지정함
-
-**Porechop**
-
-```{bash, Porechop}
-for i in $barcodes; do porechop -i ./"$i"/single_read/"$i".fastq.gz --format fastq.gz | gzip > ./"$i"/single_read/trim.fastq.gz; done
-```
-
-# 
-
-# Real Sample Code (이전)
-
-> 실제 샘플과 `tag_demultiplex.py`를 사용하여 분석 시행.\
-> 실제 환경과 같게 Bash script의 loop를 사용하여 여러개의 barcode를 동시에 처리하였음.
-
--   분석 환경은 `docker` `tjdrns27/ont:2.4` 에서 진행 됨
-
--   M1의 `pre-processing`이 마무리 된 상태에서 시작 함
-
-<!-- -->
-
-    Sequencing Data = "/home/seq/2021/210701_DH5a-PLib/dh5a-plib/20210701_0930_MC-110372_0_agw324_ac3da2d2/fastq_pass"
-
-    DH5a P_Lib colony = 240개
-
-    Construct = P1-23_C21_sfGFP_T25
-
-    Used barcode(ONT) = [1-6]
-    Used tag = [A-E], [1-8]
-
-### 1. Pre-processing
+# 미완
